syntax = "proto3";

option csharp_namespace="GrpcServices";

service Training {
  rpc getSubjectByCode (GetSubjectByCodeRequest) returns (GetSubjectCodeResponse) {};
}

message GetSubjectByCodeRequest {
  string subjectCode = 1;
}

message GetSubjectCodeResponse {
  string subjectCode = 1;
  string subjectName = 2;
}